--- a/MasterFloor/Views/MainWindow.xaml
+++ b/MasterFloor/Views/MainWindow.xaml
@@ -1,12 +1,35 @@
-﻿<NavigationWindow x:Class="MasterFloor.MainWindow"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                  xmlns:local="clr-namespace:MasterFloor"
-                  mc:Ignorable="d"
-                  Height="450"
-                  Width="800"
-                  Icon="/Images/Мастер пол.ico"
-                  Source="ListPage.xaml">
-</NavigationWindow>
+﻿<Window x:Class="MasterFloor.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:MasterFloor"
+        mc:Ignorable="d"
+        Height="450"
+        Width="800"
+        Icon="/Images/Мастер пол.ico">
+    <DockPanel>
+        <Grid DockPanel.Dock="Top"
+              Background="#67BA80"
+              Height="60">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Image Source="/Images/Мастер пол.png"
+                   Width="40"
+                   Height="40"
+                   Margin="10" />
+            <TextBlock x:Name="headerTitle"
+                       Grid.Column="1"
+                       VerticalAlignment="Center"
+                       FontSize="24"
+                       FontWeight="Bold"
+                       Foreground="White"
+                       Text="Партнёры компании Мастер пол" />
+        </Grid>
+
+        <Frame x:Name="MainFrame"
+               NavigationUIVisibility="Hidden" />
+    </DockPanel>
+</Window>
