--- a/MasterFloor/Views/PartnerProductListPage.xaml
+++ b/MasterFloor/Views/PartnerProductListPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MasterFloor.Views.ListPage"
+﻿<Page x:Class="MasterFloor.Views.PartnerProductListPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,9 @@
       xmlns:local="clr-namespace:MasterFloor.Views"
       mc:Ignorable="d"
       d:DesignHeight="450"
-      d:DesignWidth="800">
+      d:DesignWidth="800"
+      Title="PartnerProductPage">
+
     <Grid Margin="5"
           Background="White">
         <Grid.RowDefinitions>
@@ -20,26 +22,19 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <WrapPanel Grid.Row="2"
-                   Grid.Column="2">
-            <Button Content="Рассчитать количество материала"
-                    Click="ViewMaterialCalculation_Click" />
-            <Button Content="Посмотреть историю продукции"
-                    Click="ViewPartnerProduct_Click" />
-            <Button Content="Добавить нового партнёра"
-                    Click="CreatePartner_Click" />
-        </WrapPanel>
+        <Button Content="Назад"
+                Grid.Row="2"
+                Grid.Column="2"
+                Click="Back_Click" />
 
-        <ListBox x:Name="partnersList"
+        <ListBox x:Name="productsList"
                  Background="#F4E8D3"
                  BorderBrush="Gray"
                  BorderThickness="1"
                  HorizontalContentAlignment="Stretch"
-                 MouseDoubleClick="PartnersList_MouseDoubleClick"
                  Margin="5"
                  Grid.Row="1"
                  Grid.ColumnSpan="3">
-
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -52,23 +47,19 @@
                             <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
 
-                        <TextBlock FontSize="18"
-                                   TextWrapping="Wrap">
-                            <Run Text="{Binding PartnerTypeEntity.Name}" />
-                            |
-                            <Run Text="{Binding Name}" />
-                        </TextBlock>
+                        <TextBlock Text="{Binding ProductEntity.Name}"
+                                   FontSize="18"
+                                   TextWrapping="Wrap" />
 
-                        <TextBlock Text="{Binding Discount, StringFormat=p0}"
-                                   Grid.Column="1"
+                        <TextBlock Grid.Column="1"
                                    Margin="0 0 15 0"
-                                   FontSize="18" />
-
-                        <TextBlock Grid.Row="1">
-                            <Run Text="{Binding Director}" /><LineBreak />
-                            +7 <Run Text="{Binding Phone}" /><LineBreak />
-                            Рейтинг: <Run Text="{Binding Rating}" />
+                                   FontSize="18">
+                            <Run Text="{Binding Quanity}" />
+                            <Run Text=" шт." />
                         </TextBlock>
+
+                        <TextBlock Text="{Binding SaleDate, StringFormat=dd.MM.yyyy}"
+                                   Grid.Row="1" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
